# TutoCMake_2

./: .gitignore
qtdeps.5.14.2_nodebug/: lib_readelf_rpath.sh
source/: CMakeLists.txt
source/cmake/: TutoCMake2Config.cmake.in
source/src/: mylib.hpp
source/src/mylib/: mylib.cpp  mylib.hpp
userSource/: CMakeLists.txt  Counter.cpp  Counter.hpp  main.cpp  myqml.qrc  qml.qrc
userSource/apps/: AppSelector.qml  ClickableImageWidget.qml  IconWidget.qml  SplashImage.qml  main.qml  main2.qml
userSource/cmake/: UserProjectInstallConfigure.cmake.in
